fix image stretching

--- a/prediction/static/prediction/indexDesign.css
+++ b/prediction/static/prediction/indexDesign.css
@@ -2,4 +2,6 @@ body{
     background-image:url(./neonVectorCity.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
 }
